# job_hunter

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis_agent.rs  commands.rs  db.rs  lib.rs  main.rs  mcp.rs  settings.rs  state.rs
src/app/: globals.css  layout.tsx  page.tsx
